h1. Wilderness CMS Change Log

h2. December 9, 2009

* Switched from attachment_fu to Paperclip
* Added configuration for Admin panel menu, example:
	Wilderness::ADMIN_MENU = ['Dashboard','Content','Layout','Users','Preferences'] 
* Added configuration for admin index pages, example:
	Asset.omit_fields = ['parent_id','thumbnail','assetable_type','assetable_id','category_id']
* Admin pagination CSS bug fix
* Admin index page: change truncate from 20 to 100 chars
* Fixed view bug in Admin Dashboard with camelized model names eg RadioShow
* Added classes to th and td in index view based on downcase underscored field names to allow for CSS text-alignments eg left alignment of title, centering of "published", etc.