@@ -4,9 +4,9 @@
 
 		<% row[:fields].each do |field| %>
 			<% if field[:type] == :image %>
-					<td class="<%= field[:name].downcase.underscore %>" id='<%= "#{@wilderness.controller_name.singularize}_#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><%= image_tag(field[:value])%></td>
+					<td class="<%= field[:name].downcase.underscore.gsub(" ","_") %>" id='<%= "#{@wilderness.controller_name.singularize}_#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><%= image_tag(field[:value])%></td>
 			<% else %>
-			<td class="<%= field[:name].downcase.underscore %>" id='<%= "#{@wilderness.controller_name.singularize}_#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><span id='<%= "#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><%= truncate(strip_tags(field[:value].to_s),:length => field[:name] == 'Title' ? 100 : 20) %></span></td> 
+			<td class="<%= field[:name].downcase.gsub(" ","_") %>" id='<%= "#{@wilderness.controller_name.singularize}_#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><span id='<%= "#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}" %>'><%= truncate(strip_tags(field[:value].to_s),:length => field[:name] == 'Title' ? 100 : 20) %></span></td> 
 				<% if field[:editable] == true %>
 					<%= in_place_editor "#{field[:name].downcase.gsub(' ','_')}_#{row[:item].id}", :url => "#{controller_name}/set_#{@klass.to_s.downcase}_#{field[:name].downcase}/#{row[:item].id}" %>
 				<% end %>
